Adding total_expense to Restaurant

--- a/app/views/restaurants/_restaurant.html.erb
+++ b/app/views/restaurants/_restaurant.html.erb
@@ -5,6 +5,11 @@
   </p>
 
   <p>
+    <strong>Total Expense:</strong>
+    $<%= restaurant.total_expense || 0.0 %>
+  </p>
+
+  <p>
     <strong>Icon:</strong>
     <%= restaurant.icon %>
   </p>
