--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body>
+    <p class="notice" style="color: green;"><%= notice %></p>
+    <p class="alert" style="color: red;"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
