Implement Stylings for Restaurants#index

--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: restaurant) do |form| %>
+<%= form_with(model: restaurant, html: { multipart: true }) do |form| %>
   <% if restaurant.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(restaurant.errors.count, "error") %> prohibited this restaurant from being saved:</h2>
@@ -18,7 +18,7 @@
 
   <div>
     <%= form.label :icon, style: "display: block" %>
-    <%= form.text_field :icon %>
+    <%= form.file_field :icon %>
   </div>
 
   <div>
