--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,6 +1,4 @@
-<nav class="nav d-flex justify-content-center align-items-center">
-  <h1>Restaurants</h1>
-</nav>
+<%= render 'shared/nav', title: "Restaurants", back: false %>
 
 <div class="card shadow-bottom d-flex justify-content-between">
   <p class="text-gray-lighter">Total Expense</p>
