--- a/app/assets/stylesheets/utilities.scss
+++ b/app/assets/stylesheets/utilities.scss
@@ -8,34 +8,6 @@
   box-shadow: 0 1px 5px $shadow_color;
 }
 
-.d-flex {
-  display: flex;
-}
-
-.justify-content-between {
-  justify-content: space-between;
-}
-
-.justify-content-center {
-  justify-content: center;
-}
-
-.align-items-center {
-  align-items: center;
-}
-
-.flex-column {
-  flex-direction: column;
-}
-
-.justify-self-center {
-  justify-self: center;
-}
-
-.gap-1 {
-  gap: 0.5rem;
-}
-
 .mx-2 {
   margin-right: 1rem;
   margin-left: 1rem;
@@ -61,12 +33,37 @@
   padding: 1.5rem;
 }
 
+.p-1 {
+  padding: 0.5rem;
+}
+
+.py-1 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .m-1 {
   margin: 1rem;
 }
 
 .m-3 {
   margin: 1.5rem;
+}
+
+.ml-1 {
+  margin-left: 0.5rem;
+}
+
+.mr-1 {
+  margin-right: 0.5rem;
+}
+
+.mr-2 {
+  margin-right: 1rem;
+}
+
+.mr-5 {
+  margin-right: 2.5rem;
 }
 
 .text-bold {
@@ -100,6 +97,18 @@
 .text-decoration-none {
   text-decoration: none;
   color: $text_color;
+}
+
+.text-uppercase {
+  text-transform: uppercase;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.bg-primary {
+  background: $primary;
 }
 
 .bg-secondary {
