--- a/app/views/expenses/_expense.html.erb
+++ b/app/views/expenses/_expense.html.erb
@@ -1,17 +1,8 @@
 <div id="<%= dom_id expense %>">
-  <p>
-    <strong>Name:</strong>
-    <%= expense.name %>
-  </p>
-
-  <p>
-    <strong>Author:</strong>
-    <%= expense.author_id %>
-  </p>
-
-  <p>
-    <strong>Amount:</strong>
-    $<%= expense.amount %>
-  </p>
-
+  <div class="d-flex justify-content-between mb-1">
+    <p class="text-bold"><%= expense.name %></p>
+    <p>$<%= expense.amount %></p>
+  </div>
+  <p class="d-flex align-items-center gap-1 mb-1"><%= image_tag image_url('calendar') %><%= expense.updated_at.strftime("%d %b %Y") %></p>
+  <hr class="separator"/>
 </div>
