Implement Stylings for Restaurants#form

--- a/app/assets/stylesheets/utilities.scss
+++ b/app/assets/stylesheets/utilities.scss
@@ -21,6 +21,14 @@
   margin-bottom: 1rem;
 }
 
+.mt-2 {
+  margin-top: 1rem;
+}
+
+.mt-3 {
+  margin-top: 1.5rem;
+}
+
 .mt-5 {
   margin-top: 2.5rem;
 }
@@ -29,12 +37,16 @@
   margin-bottom: 7rem;
 }
 
-.p-3 {
-  padding: 1.5rem;
-}
-
 .p-1 {
   padding: 0.5rem;
+}
+
+.p-2 {
+  padding: 1rem;
+}
+
+.p-3 {
+  padding: 1.5rem;
 }
 
 .py-1 {
@@ -127,4 +139,8 @@
   bottom: 0;
   right: auto;
   left: auto;
+}
+
+.unstyled-list {
+  list-style: none;
 }
