--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,9 +1,9 @@
-<%= form_with(model: restaurant, html: { multipart: true }) do |form| %>
+<%= form_with(model: restaurant, html: { multipart: true }, class: 'card mt-2 d-flex flex-column gap-1')  do |form| %>
   <% if restaurant.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(restaurant.errors.count, "error") %> prohibited this restaurant from being saved:</h2>
+      <h2 class="mb-1"><%= pluralize(restaurant.errors.count, "error") %> prohibited this restaurant from being saved:</h2>
 
-      <ul>
+      <ul class="unstyled-list">
         <% restaurant.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
@@ -12,16 +12,15 @@
   <% end %>
 
   <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, class: 'w-100 form-control', placeholder: 'Restaurant Name' %>
   </div>
 
-  <div>
-    <%= form.label :icon, style: "display: block" %>
-    <%= form.file_field :icon %>
+  <hr class="separator" />
+
+  <div class="mb-2">
+    <%= form.label :icon, style: "display: block", class: 'mb-1' %>
+    <%= form.file_field :icon, accept: 'image/png,image/gif,image/jpeg', class: 'form-file' %>
   </div>
 
-  <div>
-    <%= form.submit %>
-  </div>
+  <%= form.submit class: 'btn-primary w-100 p-2 text-bold' %>
 <% end %>
