--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,9 +1,3 @@
-<h1>New restaurant</h1>
+<%= render 'shared/nav', title: 'New restaurant', back: true %>
 
 <%= render "form", restaurant: @restaurant %>
-
-<br>
-
-<div>
-  <%= link_to "Back to restaurants", restaurants_path %>
-</div>
