--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing restaurant</h1>
+<%= render 'shared/nav', title: 'Editing restaurant', back: true %>
 
 <%= render "form", restaurant: @restaurant %>
 
