--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,22 @@
-<h2>Resend confirmation instructions</h2>
+<%= render 'shared/nav', title: "Resend confirmation instructions", back: false %>
 
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <div class='card mt-2 d-flex flex-column gap-1'>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+    <div class="field">
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: 'Email', class: 'w-100 form-control', value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+    </div>
+
+    <hr class="separator" />
+
+    <div class="actions my-2">
+      <%= f.submit "Resend confirmation instructions", class: 'btn-primary w-100 p-2 text-bold' %>
+    </div>
+
+    <div class="d-flex flex-column align-items-center">
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
-  </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
