--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,40 @@
-<h2>Sign up</h2>
+<%= render 'shared/nav', title: "Sign up", back: false %>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <div class='card mt-2 d-flex flex-column gap-1'>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "text" %>
+    <div class="field">
+      <%= f.text_field :name, autofocus: true, autocomplete: "text", placeholder: 'Name', class: 'w-100 form-control' %>
+    </div>
+    <hr class="separator" />
+
+    <div class="field">
+      <%= f.email_field :email, autocomplete: "email", placeholder: 'Email', class: 'w-100 form-control' %>
+    </div>
+    <hr class="separator" />
+
+    <div class="field">
+      <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
+      <%= f.password_field :password, autocomplete: "new-password", placeholder: 'New Password', class: 'w-100 form-control' %>
+    </div>
+    <hr class="separator" />
+
+    <div class="field">
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: 'Password confirmation', class: 'w-100 form-control' %>
+    </div>
+    <hr class="separator" />
+
+    <div class="actions mt-2">
+      <%= f.submit "Sign up", class: 'btn-primary w-100 p-2 text-bold' %>
+    </div>
+
+    <div class="d-flex flex-column align-items-center">
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
