--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -1,9 +1,9 @@
-<%= form_with(model: expense) do |form| %>
+<%= form_with(model: expense, class: 'card mt-2 d-flex flex-column gap-1') do |form| %>
   <% if expense.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(expense.errors.count, "error") %> prohibited this expense from being saved:</h2>
 
-      <ul>
+      <ul class="list-group">
         <% expense.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
@@ -12,21 +12,25 @@
   <% end %>
 
   <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, class: 'w-100 form-control', placeholder: 'Expense Name' %>
   </div>
 
-  <div>
-    <%= form.label :amount, style: "display: block" %>
-    <%= form.text_field :amount %>
-  </div>
+  <hr class="separator" />
 
   <div>
-    <%= form.label :restaurant_ids, 'Restaurants', style: "display: block" %>
-    <%= form.collection_select :restaurant_ids, @restaurants, :id, :name, { }, { multiple: true } %>
+    <%= form.text_field :amount, class: 'w-100 form-control', placeholder: '12.05' %>
   </div>
 
+  <hr class="separator" />
+
   <div>
-    <%= form.submit %>
+    <%= form.label :restaurant_ids, 'Restaurants:', class: 'mb-1', style: "display: block" %>
+    <%= form.collection_select :restaurant_ids, @restaurants, :id, :name, { }, { multiple: true, class: 'w-100'} %>
+  </div>
+
+  <hr class="separator" />
+
+  <div>
+    <%= form.submit class: 'btn-primary w-100 p-2 text-bold' %>
   </div>
 <% end %>
