--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,9 +1,3 @@
-<h1>New expense</h1>
+<%= render 'shared/nav', title: 'New expense', back: true %>
 
 <%= render "form", expense: @expense %>
-
-<br>
-
-<div>
-  <%= link_to "Back to expenses", expenses_path %>
-</div>
