--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -3,7 +3,7 @@
     <div style="color: red">
       <h2 class="mb-1"><%= pluralize(restaurant.errors.count, "error") %> prohibited this restaurant from being saved:</h2>
 
-      <ul class="unstyled-list">
+      <ul class="list-group">
         <% restaurant.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
