--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -5,6 +5,11 @@
   src: font_url('Proxima_Nova_Font.otf');
 }
 
+@font-face {
+  font-family: "Lobster";
+  src: font_url('Lobster-Regular.ttf');
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -14,4 +19,8 @@ body {
   font-family: 'Proxima Nova', serif;
   color: $text_color;
   background-color: $background;
+}
+
+html, body {
+  min-height: 100%;
 }
