--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -5,7 +5,7 @@
     <%= image_tag url_for(@restaurant.icon), width: 50, height: 50 %>
     <div class="d-flex justify-content-between align-items-center w-100">
       <h3><%= @restaurant.name %></h3>
-      <%= button_to raw(image_tag image_url('trash')), @restaurant, method: :delete, class: 'btn-danger' %>
+      <%= button_to raw(image_tag image_url('trash.svg')), @restaurant, method: :delete, class: 'btn-danger' %>
     </div>
   </div>
 
@@ -14,7 +14,7 @@
 
   <div class="d-flex justify-content-between align-items-center">
     <%= link_to 'Add a new expense', new_expense_path %>
-    <%= link_to raw(image_tag image_url('pencil')), edit_restaurant_path(@restaurant) %>
+    <%= link_to raw(image_tag image_url('pencil.svg')), edit_restaurant_path(@restaurant) %>
   </div>
 
   <hr class="separator"/>
