--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -5,17 +5,12 @@
     <%= image_tag url_for(@restaurant.icon), width: 50, height: 50 %>
     <div class="d-flex justify-content-between align-items-center w-100">
       <h3><%= @restaurant.name %></h3>
-      <%= button_to raw(image_tag image_url('trash.svg')), @restaurant, method: :delete, class: 'btn-danger' %>
+      <%= link_to raw(image_tag image_url('pencil.svg')), edit_restaurant_path(@restaurant) %>
     </div>
   </div>
 
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+  <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-  <div class="d-flex justify-content-between align-items-center">
-    <%= link_to 'Add a new expense', new_expense_path %>
-    <%= link_to raw(image_tag image_url('pencil.svg')), edit_restaurant_path(@restaurant) %>
-  </div>
 
   <hr class="separator"/>
 
@@ -28,4 +23,8 @@
     <p class="text-bold">$<%= @restaurant.total_expense %></p>
   </div>
 
+</div>
+
+<div class="bg-secondary fixed-bottom-center w-100">
+  <%= link_to 'Add a new expense', new_expense_path, class: "green-button m-1" %>
 </div>
